# fitnessWebApp-UI/src/app/services/models/progresso-response.ts
@@ -1,0 +1,11 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface ProgressoResponse {
+  altezzaCm: number;
+  dataMisurazione: string;
+  id: number;
+  note?: string;
+  percentualeMassaGrassa: number;
+  percentualeMassaMagra: number;
+  pesoKg: number;
+}
