# fitnessWebApp-UI/src/app/services/models/user-request.ts
@@ -1,0 +1,9 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface UserRequest {
+  dateOfBirth: string;
+  firstname: string;
+  lastname: string;
+  newPassword?: string;
+  oldPassword?: string;
+}
